--- a/UserAuth/views/signup.ejs
+++ b/UserAuth/views/signup.ejs
@@ -7,18 +7,21 @@
   <%- include('includes/header.ejs') %>
   <main id="signup">
     <h1>Signup</h1>
+    <% if(inputData.hasError){ %>
+      <p id="input-error"><%= inputData.message %></p>
+    <%}%>
     <form action="/signup" method="POST">
       <div class="form-control">
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" value="<%= inputData.email %>" required>
       </div>
       <div class="form-control">
         <label for="confirmE">Confirm Email</label>
-        <input type="email" id="confirmE" name="confirmE" required>
+        <input type="email" id="confirmE" name="confirmE" value="<%= inputData.confirmEmail %>" required>
       </div>
       <div class="form-control">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" value="<%= inputData.password %>" required>
       </div>
       <button class="btn">Create user</button>
     </form>
